# reget

./: .gitignore  LICENSE  README.md  config.py  default.yaml  output.py  patterns.py  processor.py  pyproject.toml  reget.py  reget.yaml  reget_new.py  requirements.txt  utils.py
reget/: output.py  patterns.py
