[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "reget"
version = "1.0.0"
description = "Semantic regex CLI tool"
requires-python = ">=3.9"

dependencies = [
    "PyYAML>=6.0",
    "regex>=2023.0"
]

[project.scripts]
reget = "reget.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["reget*"]
exclude = ["etc*"]